fix mobile navbar overflowing on right side

--- a/src/components/Base.scss
+++ b/src/components/Base.scss
@@ -8,5 +8,4 @@
 
 body {
     background-image: url("../../static/images/background.jpg");
-	height: 800px;
 }
