--- a/src/components/Navbar.scss
+++ b/src/components/Navbar.scss
@@ -63,6 +63,8 @@ img {
       text-align: center;
       width: 100%;
       display: block;
+      padding-left: 0px;
+      padding-right: 0px;
     }
 
     ul {
